Bug 422298 - blank list and column settings are rest after changing field order in the windows Fields
Summary: blank list and column settings are rest after changing field order in the win...
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-31 16:42 UTC by Stephane Couturier
Modified: 2020-08-10 13:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.3.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stephane Couturier 2020-05-31 16:42:46 UTC
SUMMARY

Hi,
When I change the order of the fields in the windows Fields, and when I somehow switch position between some that are displayed, the list goes blank until I close and restart Tellico, and then the List is reduced to the Title field.

STEPS TO REPRODUCE
1. Display some additional fields, e.g Title, Year, Genre
2. go to Fields, select Genre and move it up the list before Year
3. apply, the list area is getting blank.

OBSERVED RESULT


EXPECTED RESULT
- changing fields order on the Field window does not blanks the list,
- list settings are not lost (field selected, order, size of the columns)

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Robby Stephenson 2020-08-10 13:50:55 UTC
Git commit 520a90e218f1bd7cbe51570e19cf1ae987b82e00 by Robby Stephenson.
Committed on 10/08/2020 at 13:49.
Pushed by rstephenson into branch '3.3'.

Fix detailed listview header visibility after reordering fields
FIXED-IN: 3.3.3

M  +4    -0    ChangeLog
M  +2    -1    src/detailedlistview.cpp
M  +30   -3    src/models/entrymodel.cpp
M  +5    -4    src/models/entrymodel.h

https://invent.kde.org/office/tellico/commit/520a90e218f1bd7cbe51570e19cf1ae987b82e00
Comment 2 Robby Stephenson 2020-08-10 13:51:21 UTC
Git commit 7ef9f487e8c620ba641a51aec36e0f771a75c716 by Robby Stephenson.
Committed on 10/08/2020 at 13:47.
Pushed by rstephenson into branch 'master'.

Fix detailed listview header visibility after reordering fields
FIXED-IN: 3.3.3

M  +4    -0    ChangeLog
M  +2    -1    src/detailedlistview.cpp
M  +30   -3    src/models/entrymodel.cpp
M  +5    -4    src/models/entrymodel.h

https://invent.kde.org/office/tellico/commit/7ef9f487e8c620ba641a51aec36e0f771a75c716