Fix detailed listview header visibility after reordering fields

BUG: 422298
FIXED-IN: 3.3.3